# Matematik1

./: LICENSE  README.md  matte1-hs.cabal
src/: Helpers.hs  Main.hs  Rat.hs  Sgd.hs
