name:                matte1-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eriksvedang/matte1-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Svedäng
maintainer:          erik.svedang@gmail.com
copyright:           Erik Svedäng
category:            General
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable matte1-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
